--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_ENV=production
+APP_KEY=base64:iM+rKF2/bMRRYOjnEABAuCtFSZ09NzqHew3ebcw2Gks=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=maglev.proxy.rlwy.net
+DB_PORT=48992
+DB_DATABASE=railway
+DB_USERNAME=postgres
+DB_PASSWORD=SQxIAWzcHFFlxYQYeVcnECvQhSmacUre
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
