--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:iM+rKF2/bMRRYOjnEABAuCtFSZ09NzqHew3ebcw2Gks=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=first-laravel-2-production.up.railway.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=maglev.proxy.rlwy.net
-DB_PORT=48992
-DB_DATABASE=railway
+DB_HOST=db.yairriboomxchlemnvif.supabase.co
+DB_PORT=5432
+DB_DATABASE=postgres
 DB_USERNAME=postgres
-DB_PASSWORD=SQxIAWzcHFFlxYQYeVcnECvQhSmacUre
+DB_PASSWORD=First_890Postgre
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
