--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=db.yairriboomxchlemnvif.supabase.co
+DB_HOST=db.hryjgfeaidkxaqxayggc.supabase.co
 DB_PORT=5432
 DB_DATABASE=postgres
 DB_USERNAME=postgres
