--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,14 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:iM+rKF2/bMRRYOjnEABAuCtFSZ09NzqHew3ebcw2Gks=
 APP_DEBUG=true
-APP_URL=first-laravel-2-production.up.railway.app
+APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
+# APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -20,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=db.hryjgfeaidkxaqxayggc.supabase.co
-DB_PORT=5432
-DB_DATABASE=postgres
+DB_HOST=maglev.proxy.rlwy.net
+DB_PORT=48992
+DB_DATABASE=railway
 DB_USERNAME=postgres
-DB_PASSWORD=First_890Postgre
+DB_PASSWORD=SQxIAWzcHFFlxYQYeVcnECvQhSmacUre
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
