--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,11 @@ DB_DATABASE=railway
 DB_USERNAME=postgres
 DB_PASSWORD=SQxIAWzcHFFlxYQYeVcnECvQhSmacUre
 
+CLOUDINARY_CLOUD_NAME=dpdp49etr
+CLOUDINARY_API_KEY=379453541962612
+CLOUDINARY_API_SECRET=OEuXqxebvv-wwF3ftshXTwueJ8w
+CLOUDINARY_URL=cloudinary://379453541962612:OEuXqxebvv-wwF3ftshXTwueJ8w@dpdp49etr
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
