--- a/.env.example
+++ b/.env.example
@@ -21,16 +21,16 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=maglev.proxy.rlwy.net
-DB_PORT=48992
-DB_DATABASE=railway
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
 DB_USERNAME=postgres
-DB_PASSWORD=SQxIAWzcHFFlxYQYeVcnECvQhSmacUre
+DB_PASSWORD=
 
-CLOUDINARY_CLOUD_NAME=dpdp49etr
-CLOUDINARY_API_KEY=379453541962612
-CLOUDINARY_API_SECRET=OEuXqxebvv-wwF3ftshXTwueJ8w
-CLOUDINARY_URL=cloudinary://379453541962612:OEuXqxebvv-wwF3ftshXTwueJ8w@dpdp49etr
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_URL=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
